<resources>
    <string name="app_name">OpenStreamer</string>

    <string name="secondsOfVideo">%1$.3f seconds of video</string>
    <string name="capture">Capture</string>
    <string name="nowRecording">" [RECORDING]"</string>
    <string name="nowSaving">" [saving]"</string>
    <string name="recordingSucceeded">Recording succeeded</string>
    <string name="recordingFailed">Recording FAILED (err=%1$d)</string>

    <string name="bottom_menu_record">Record</string>
    <string name="bottom_menu_play">Play</string>
    <string name="bottom_menu_stream">Stream</string>

    <string name="play_button_text">Play</string>
    <string name="stop_button_text">Stop</string>

    <string name="locked60fps_checkbox">Play at 60fps</string>
    <string name="loopPlayback_checkbox">Loop playback</string>


</resources>
